# ball-bouncer

./: Ball.cpp  Ball.h  Box.cpp  Box.h  CMakeLists.txt  Entity.h  Game.cpp  Game.h  Helpers.cpp  Helpers.h  Particle.cpp  Particle.h  PowerBox.cpp  PowerBox.h  Resources.cpp  Resources.h  cover.xcf  main.cpp  mingw32.sh  zip-all-builds.sh
res/: background.xcf  bad-bouncer.xcf  ball.xcf  good-bouncer.xcf
